tests/Checker/everything/errors/2e.vc
int main(int a) {
    int a = 2;
    return 1;
}
